--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,2 +1,23 @@
 /* CSS Document */
 
+body{
+    font-family: 'Poppins', sans-serif;
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+.conteudo{
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    justify-content: space-evenly;
+}
+
+.informacoes{
+    background-color: yellowgreen;
+}
+
+.informacoes .logo{
+    
+}
