--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,16 +6,22 @@ body{
     margin: 0 auto;
 }
 
+main::after{ /* Criação de mascara */
+    content: '';
+    min-width: 100vh;
+    width: 100vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: linear-gradient(90deg,rgba(0,0,0,1) 10%, rgba(0,0,0,0.05926120448179273) 50%, rgba(0,0,0,1) 90%);
+    
+}
+
 .conteudo{
-    background-color: aquamarine;
     display: flex; /* Flexibiliza os elementos da tela por padrão em linha "flex-direction : row" */
     flex-direction: column; /* Converte a flexibilização em coluna */
     min-height: 100vh; /* Minimo de margem lateral */
     justify-content: space-evenly; /* Justifica o conteudo */
-}
-
-.informacoes{
-    background-color: yellowgreen;
 }
 
 .informacoes .logo{
@@ -32,10 +38,9 @@ body{
 }
 
 .botoes-carrossel{
-    background-color: red;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 20px; /* Separa os itens */
 }
 
 .botoes-carrossel .botao{
@@ -54,5 +59,56 @@ body{
 }
 
 .menu-lateral{
-    background-color: aqua;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.menu-lateral ul{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.menu-lateral .icone{
+    height: 30px;
+    filter: invert(1);
+    transition: 0.3s ease-in-out; /* Transforma o item devagar */
+}
+
+.menu-lateral .icone:hover{
+    transform: scale(1.2); /* Almenta o item */
+}
+
+.carrossel{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: -1;/* coloca o item para tras */
+}
+
+.carrossel .imagem{
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    display: none; /* Não mostrar o item */
+    animation: mudarImagem 0.7s;
+}
+
+.carrossel .imagem.ativa{
+    display: block; /* mostrar o item */
+}
+
+@keyframes mudarImagem{
+    from{
+        opacity: 0.85;
+    }to{
+        opacity: 1;
+    }
 }
